--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "python-dateutil>=2.9.0",
   "httpx>=0.27.0",
   "requests>=2.32.0",
+  "loguru>=0.7.2",
 ]
 
 [dependency-groups]
